2011-05-18  Vladimir Tzankov  <vtzankov@gmail.com>

        * spvw_sigcld.d (sigcld_enabled_INCF/DECF): fix counting

2011-05-18  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c: do not include <ws2tcpip.h> twice
	* modules/rawsock/configure.in: <winsock2.h> is checked by gl_SOCKETLIB;
	add LIBSOCKET to LIBS while checking for functions

2011-05-18  Sam Steingold  <sds@gnu.org>

	* modules/i18n/configure.in: gl_FUNC_NL_LANGINFO is already called
	by gl_INIT in the top-level config file

2011-05-18  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f, modules/clx/new-clx/configure.in:
	* modules/fastcgi/configure.in, modules/regexp/configure.in:
	* modules/rawsock/configure.in, modules/rawsock/rawsock.c:
	* modules/syscalls/configure.in, configure.in, m4/general.m4:
	* m4/rusage.m4: do not check for gnulib files
	* Makefile.devel (GNULIB_CORE): add sys_uio & socketlib (already
	present as dependencies)
	* m4/putenv.m4: remove (should have been removed on 2010-09-27)
	* modules/syscalls/calls.c, modules/syscalls/configure.in:
	<sys/wait.h> and <wchar.h> are provided by gnulib

2011-05-18  Sam Steingold  <sds@gnu.org>

	* makemake.in (SUBDIR_CFLAGS): add @NO_CXX@ because
	gnulib regexp and fnmatch cannot be compiled with C++

2011-05-17  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c, modules/berkeley-db/bdb.c:
	* modules/berkeley-db/configure.in, modules/syscalls/configure.in:
	* modules/fastcgi/fastcgi_wrappers.c, modules/gdbm/gdbm.c:
	* rawsock/rawsock.c, modules/rawsock/configure.in:
	no need to check and guard gnulib #include files and functions

2011-05-17  Sam Steingold  <sds@gnu.org>

	merge the wildcard module into syscalls; import gnulib into src only
	before: clisp:52,284k modules:14,136k src:25,876k
	after:  clisp:44,200k modules: 8,684k src:24,836k
	* Makefile.devel (MODULES): remove wildcard
	(GNULIB_USERS, MAKEFILE_IN): remove
	(gnulib-imported): import files into src/ only