@@ -1,5 +1,10 @@
 2011-05-18  Vladimir Tzankov  <vtzankov@gmail.com>
 
+        * xthread.d: use "raw" mutexes for emulating spinlocks on
+        architectures with no inline asm versions
+
+2011-05-18  Vladimir Tzankov  <vtzankov@gmail.com>
+
         * spvw_sigcld.d (sigcld_enabled_INCF/DECF): fix counting
 
 2011-05-18  Sam Steingold  <sds@gnu.org>
